--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -667,6 +667,13 @@
                                     </span>
                                 </td>
                             </tr>
+                            <tr>
+                                <td class="yty_tdleft"  style="border-bottom: none !important;"></td>
+                                <td class="yty_tdright"  style="border-bottom: none !important;">
+                                    <button type="submit" lay-submit="" lay-filter="" class="layui-btn yty-btn  layui-btn-primary btn-primary-border layui-btn-sm btn-embossed">上一步</button>
+                                    <button type="reset" class="layui-btn layui-btn-sm layui-btn-normal yty-btn btn-embossed">发送短信</button>
+                                </td>
+                            </tr>
                             </tbody>
                         </table>
                             </div>
