短信发送记录

--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -4,7 +4,7 @@
 <div class="layui-fluid">
     <!--<div class="layui-row layui-col-space15">-->
         <div class="layui-col-md12 webody">
-            <div class="layui-row layui-col-space15">
+            <div class="layui-row yty-bck">
             <div class="layui-col-12">
                 <div class="searchbody">
                     <!--<form class="layui-form" method="post" action="{:url('admin/auth.admin/index','',false)}" tableid="tableReload" id="formRule" lay-filter="rule">-->
