--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -351,7 +351,7 @@
                                 <!--------公告信息模块end-------->
 
                                 <!--------联系客服模块begin-------->
-                                <div class="layui-card yty-card" style="height: 260px">
+                                <div class="layui-card yty-card height-auto">
                                     <div class="layui-card-header h1"><span class="sm-st-icon-right sm-client"><i class="fa fa-phone-square"></i></span> 联系客服</div>
                                     <div class="layui-card-body">
                                         <table class="layui-table table-border" lay-skin="line" lay-size="sm">
