--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -2,7 +2,7 @@
 {block name="content"}
 <body>
 <div class="layui-fluid">
-    <!--<div class="layui-row layui-col-space15">-->
+    <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-row yty-bck">
             <div class="layui-col-12">
@@ -106,7 +106,7 @@
             </div>
         </div>
     </div>
-<!--</div>-->
+</div>
 </div>
 
 <!--头工具栏-->
