--- a/public/static/style/green-header.css
+++ b/public/static/style/green-header.css
@@ -17,7 +17,7 @@
     background: -o-linear-gradient(left, #313aa4 , #506dee); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(left, #313aa4 , #506dee); /* Firefox 3.6 - 15 */
     background: linear-gradient(left, #313aa4 , #506dee); /* 标准的语法 */
-    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
+    /*box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);*/
 }
 
 /*.layui-nav-tree li:hover{*/
