--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -24,7 +24,7 @@
 
 <!--表格头部按钮begin-->
 <script type="text/html" id="toolbar">
-    <a class="layui-btn layui-btn-sm layui-btn-normal yty-btn" lay-event="add"><i class="fa fa-plus"></i> 新建任务</a>
+    <a class="layui-btn layui-btn-sm layui-btn-normal yty-btn" lay-event="add_task"><i class="fa fa-plus"></i> 新建任务</a>
 </script>
 <!--表格头部按钮end-->
 
@@ -129,7 +129,7 @@
         /**
          * 表格初始化
          */
-        weTable.api.init({
+        /*weTable.api.init({
             table : "rule",
             tableid : "tableReload",
             form:$("form#formRule"),
@@ -141,13 +141,23 @@
                 "del_url": "{:url('admin/auth.admin/del','',false)}",
                 "export_url" : "{:url('admin/auth.admin/index','',false)}"
             }
-        });
+        });*/
 
         /**
          * 绑定监听事件
          * */
-        weTable.api.bindevent();
+        //weTable.api.bindevent();
         formSearch.api.searchForm($("form#formRule"));
+
+        //头工具栏事件
+        table.on('toolbar(rule)', function(obj){
+            console.log(obj.event);
+            if(obj.event == 'add_task') {
+                var url = "{:url('admin/order/task_add')}"
+                we.api.open(url,'新建任务',{zIndex:19891017,shade: 0.4},['98%' , '90%']);
+            }
+        })
+
         //监听行工具事件
         /* table.on('tool(rule)', function(obj){
          var data = obj.data;
