--- a/application/admin/view/Activity/sms_record.html
+++ b/application/admin/view/Activity/sms_record.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="layui-card">
-            <div class="layui-card-body">
+            <div class="layui-card-body layui-card-body-padding">
                 <table class="layui-hide" id="rule" lay-filter="rule" table-reload-id="tableReload" lay-size="sm"></table>
             </div>
         </div>
