--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2602,3 +2602,24 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     font-weight: bold;
     font-size: 14px;
 }
+
+.yty-body-auto{
+    width:100%;
+    height: 100%;
+    background: #ffffff;
+    position: fixed;
+    display: block;
+    top: 180px;
+    bottom: 180px !important;
+}
+
+.top-menu{
+    top: 102px;
+    bottom: 0;
+    position: fixed;
+    display: block;
+}
+
+.layui-card-body-padding{
+    padding: 0px;
+}
