--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -414,7 +414,12 @@
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-card main-table">
-                <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>第一步：筛选条件 </div>
+                <div class="layui-card-header yty-card-header">
+                    <!--<span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>-->
+                    <span class="step step-number-active">1</span><span class="step-active">第一步：筛选条件</span>
+                    <span class="step-line"></span>
+                    <span class="step step-left">2</span>第二步：编辑短信
+                </div>
                 <div class="layui-card-body layui-card-body-padding">
                     <!--表格查询条件begin-->
                     <!--<div class="searchbody">-->
@@ -577,7 +582,7 @@
             </div>
         </div>
 
-        <div class="layui-col-md12 webody1">
+        <div style="display: none" class="layui-col-md12 webody1">
             <div class="layui-card main-table">
                 <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>第二步：编辑短信  </div>
                 <div class="layui-card-body main-body">
