下一步按钮

--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -554,8 +554,9 @@
                                 <tr>
                                     <td class="yty_tdleft"  style="border-bottom: none !important;"> 筛选操作 :</td>
                                     <td class="yty_tdright"  style="border-bottom: none !important;">
-                                        <button type="submit" lay-submit="" lay-filter="" class="layui-btn yty-btn  layui-btn-primary btn-primary-border layui-btn-sm btn-embossed">查询</button>
-                                        <button type="reset" class="layui-btn layui-btn-sm  layui-btn-primary btn-primary-border yty-btn btn-embossed">重置</button>
+                                        <button type="button" lay-submit="" lay-filter="" class="layui-btn yty-btn  layui-btn-primary btn-primary-border layui-btn-sm">下一步</button>
+                                        <button type="submit" lay-submit="" lay-filter="" class="layui-btn yty-btn  layui-btn-normal   layui-btn-sm">查询</button>
+                                        <button type="reset" class="layui-btn layui-btn-sm  layui-btn-normal yty-btn">重置</button>
                                     </td>
                                 </tr>
                                 </tbody>
