--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -416,7 +416,7 @@
             <div class="layui-card main-table">
                 <div class="layui-card-header yty-card-header">
                     <!--<span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>-->
-                    <span class="step step-number-active">1</span><span class="step-active">第一步：筛选条件</span>
+                    <span class="step step-number-active step-one">1</span><span class="step-active">第一步：筛选条件</span>
                     <span class="step-line"></span>
                     <span class="step step-left">2</span>第二步：编辑短信
                 </div>
