--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -184,7 +184,7 @@
 <!--获取省份弹出end-->
 
 <body>
-<div class="layui-fluid">
+<div class="layui-fluid yty-body-auto">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-card main-table">
@@ -299,7 +299,6 @@
             </div>
         </div>
     </div>
-</div>
 </div>
 
 <!--头工具栏-->
