--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -223,7 +223,7 @@
             </div>
         </div>
     </div>
-</div>
+
 <!--添加黑名单end-->
 
 <!--地区筛选自定义弹出begin-->
@@ -410,7 +410,7 @@
 <!--地区筛选自定义弹出end-->
 
 <body>
-<div class="layui-fluid">
+<div class="layui-fluid yty-body-auto">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-card main-table">
@@ -711,9 +711,10 @@
                 </div>
             </div>
         </div>
+
     </div>
 </div>
-</div>
+<!--</div>-->
 
 <!--头工具栏-->
 <!--{:build_toolbar('toolbar',['refresh'])}-->
