--- a/application/admin/view/order/order_care.html
+++ b/application/admin/view/order/order_care.html
@@ -1,7 +1,7 @@
 {extend name="layout/default" /}
 {block name="content"}
 <body>
-<div class="layui-fluid">
+<div class="layui-fluid yty-body-auto">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-row yty-bck">
