--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -559,11 +559,16 @@
                                         <button type="reset" class="layui-btn layui-btn-sm  layui-btn-normal yty-btn">重置</button>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <span class="search_result" style="display: block">
+                                            筛选结果： 共筛选出<span class="red_color">0位</span>会员，其中有效<span class="red_color">0位</span>会员（有手机号，并已排重，已过滤黑名单）数据不全？去导入历史订单
+                                        </span>
+                                    </td>
+                                </tr>
                                 </tbody>
                             </table>
-                            <p class="search_result" style="display: block">
-                                筛选结果： 共筛选出<span class="red_color">0位</span>会员，其中有效<span class="red_color">0位</span>会员（有手机号，并已排重，已过滤黑名单）数据不全？去导入历史订单
-                            </p>
+
                             <!--<div class="layui-form-item footer-form">-->
                                 <!--<div class="footer footer-common">-->
                                     <!--<button type="submit" lay-submit="" lay-filter="formRule" class="layui-btn layui-btn-normal layui-btn-sm btn-embossed disabled">{:__('OK')}</button>-->
