去掉yty-body-auto

--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -410,7 +410,7 @@
 <!--地区筛选自定义弹出end-->
 
 <body>
-<div class="layui-fluid yty-body-auto">
+<div class="layui-fluid">
     <div class="layui-row layui-col-space15">
         <div class="layui-col-md12 webody">
             <div class="layui-card main-table">
@@ -560,8 +560,8 @@
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2">
-                                        <span class="search_result" style="display: block">
+                                    <td colspan="2" class="yty_tdright">
+                                        <span class="">
                                             筛选结果： 共筛选出<span class="red_color">0位</span>会员，其中有效<span class="red_color">0位</span>会员（有手机号，并已排重，已过滤黑名单）数据不全？去导入历史订单
                                         </span>
                                     </td>
