--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2577,6 +2577,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     border: 1px solid #BFBFBF;
     border-radius: 8px;
     padding: 10px;
+    margin: 10px auto;
 }
 
 .layui-select-title .layui-input{
