--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -583,7 +583,7 @@
             </div>
         </div>
 
-        <div style="display: block" class="layui-col-md12 webody1">
+        <div style="display: none" class="layui-col-md12 webody1">
             <div class="layui-card main-table">
                 <div class="layui-card-header yty-card-header"><span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>第二步：编辑短信  </div>
                 <div class="layui-card-body main-body">
