--- a/application/admin/view/Activity/member_sms.html
+++ b/application/admin/view/Activity/member_sms.html
@@ -412,7 +412,7 @@
 <body>
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12 webody">
+        <div class="layui-col-md12 webody body-overflow">
             <div class="layui-card main-table">
                 <div class="layui-card-header yty-card-header">
                     <!--<span class="sm-st-icon-left shop-info"><i class="fa  fa-ellipsis-v"></i></span>-->
