--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2662,3 +2662,7 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
 .step-one{
     margin-left: 30px;
 }
+
+.body-overflow{
+    margin-bottom: 68px;
+}
