--- a/application/admin/view/Activity/sms_record.html
+++ b/application/admin/view/Activity/sms_record.html
@@ -3,7 +3,7 @@
 <body>
 <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
-    <div class="layui-col-md12 webody">
+    <div class="layui-col-md12 webody body-overflow">
         <div class="layui-row yty-bck">
             <div class="layui-col-12">
                 <div class="searchbody">
